Wed Jul 29 16:56:07 1998  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdk.c: Fairly implementation of expose compression.
	  (No GraphicsExpose compression yet, always compress
	  with the equivalent of XtCompressMultiple - no compression
	  of Expose events across non-Expose events)
	
	* gdk/gdk.h gdk/gdkrectangle.c: gdk_rectangle_union()
	  Find rectangle bounding two rectangles.

	* gtk/gtkstyle.c: Set clip rects for a few extra GC's
	  in gdk_default_draw_shadow()
	
Wed Jul 29 16:03:20 EDT 1998 The Rasterman <raster@redhat.com>
	* Fixed drawing functions to handle switching themes on the fly 
	  gracefully and look decent.
	  
Tue Jul 28 22:52:10 EDT 1998 The Rasterman <raster@redhat.com>
	* Added all the theme drawing code to all widgets, fixed up minor
          nigglies in some widgets when it comes to themes, seem to be
          running into some funky behavior with clipping rects in GC's. Too
          many files to list here. (all files that now use gtk_paint_* are
	  affected).

Tue Jul 28 22:49:16 1998  Owen Taylor  <otaylor@redhat.com>

	* themes/th_main.c themes/th_draw.c gtk/testgtkrc: 
	  Set up the demo theme so it is loaded from the RC file.

	* themes/th_draw.c: Alleviate the hardcoded paths a wee
	  bit. (use $HOME/themes/)

	* gtk/gtkthemes.[ch] gtk/gtkmain.c: Load engines specified in 
	  the RC file via dlopen()

Tue Jul 28 20:30:56 1998  Owen Taylor  <otaylor@redhat.com>

	Internal handling of styles and RC styles pretty much
	completely reworked for Theme work.

	* gtkthemes.[ch]: 
	 - Added routines for virtualization of RcStyle and Style handling.
	 - Temporary "sample" inline theme-engine. (Does nothing
	   but print out a few messages.
	
	* gtkrc.[ch]
	 - Made GtkRcStyle public, added flags to tell if particular
	   colors have been set.
	 - RC Styles are "transparent", and the final style for
	   a widget is the composition of all matching styles
	 - Added pointer to GtkThemeEngine, and gpointer engine_data
	   to RC style and style.